[gd_scene load_steps=8 format=3 uid="uid://bndmi4qlib1jy"]

[ext_resource type="Script" uid="uid://c8376s5u3fohr" path="res://scripts/title_page.gd" id="1_j10jy"]
[ext_resource type="Texture2D" uid="uid://cwhhvbag20eek" path="res://assets/LaunchpadLogo.png" id="1_qppnp"]
[ext_resource type="FontFile" uid="uid://dcyn5sfqdlt0r" path="res://assets/fonts/Antonio-Bold.ttf" id="1_vc5yi"]

[sub_resource type="Animation" id="Animation_j10jy"]
resource_name = "TapToContinue"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TitlePageImage:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.566667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(248, 192), Vector2(248, 304), Vector2(248, 112), Vector2(248, -376)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TitlePageImage:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.566667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(224, 373), Vector2(224, 272), Vector2(224, 456), Vector2(224, 373)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SeparationLine:default_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.12549, 0.235294, 0.564706, 1), Color(0.396078, 0.396078, 0.396078, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TitleLabel:theme_override_colors/default_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SeparationLine2:default_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.866667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.67451, 0.0117647, 1), Color(1, 0.67451, 0.0117647, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Transition:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.833333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../..")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"next_scene"
}]
}

[sub_resource type="Animation" id="Animation_3h4sn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TitlePageImage:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(248, 192)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TitlePageImage:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(224, 373)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SeparationLine:default_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.12549, 0.235294, 0.564706, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TitleLabel:theme_override_colors/default_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SeparationLine2:default_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.67451, 0.0117647, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Transition:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("NavigationLabel:theme_override_colors/default_color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.625597, 0.625597, 0.625597, 1)]
}

[sub_resource type="Animation" id="Animation_b33r3"]
resource_name = "IdleScreen"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NavigationLabel:theme_override_colors/default_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.625597, 0.625597, 0.625597, 1), Color(0.627451, 0.627451, 0.627451, 0), Color(0.625597, 0.625597, 0.625597, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TitlePageImage:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(248, 192), Vector2(248, 176)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b33r3"]
_data = {
&"IdleScreen": SubResource("Animation_b33r3"),
&"RESET": SubResource("Animation_3h4sn"),
&"TapToContinue": SubResource("Animation_j10jy")
}

[node name="TitlePage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j10jy")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
root_node = NodePath("../MenuContainer")
libraries = {
&"": SubResource("AnimationLibrary_b33r3")
}
autoplay = "IdleScreen"

[node name="Background" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.921569, 0.921569, 0.921569, 1)
metadata/_edit_use_anchors_ = true

[node name="Transition" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="MenuContainer" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="TitlePageImage" type="TextureRect" parent="CanvasLayer/MenuContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.344444
anchor_top = -0.266406
anchor_right = 0.655556
anchor_bottom = 0.258594
offset_top = 522.02
offset_bottom = 223.02
texture = ExtResource("1_qppnp")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="SeparationLine" type="Line2D" parent="CanvasLayer/MenuContainer"]
position = Vector2(26.8471, 72)
scale = Vector2(0.915255, 1)
points = PackedVector2Array(16, 656, 364, 688, 712, 656)
width = 6.0
default_color = Color(0.12549, 0.235294, 0.564706, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="SeparationLine2" type="Line2D" parent="CanvasLayer/MenuContainer"]
position = Vector2(83, 106)
scale = Vector2(0.76228, 1)
points = PackedVector2Array(16, 656, 364, 688, 712, 656)
width = 6.0
default_color = Color(1, 0.67451, 0.0117647, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="TitleLabel" type="RichTextLabel" parent="CanvasLayer/MenuContainer"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.425
anchor_right = 1.0
anchor_bottom = 0.5875
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("1_vc5yi")
theme_override_font_sizes/normal_font_size = 100
text = "WHAT'S YOUR 4H?"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="NavigationLabel" type="RichTextLabel" parent="CanvasLayer/MenuContainer"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.714844
anchor_right = 1.0
anchor_bottom = 0.821094
offset_top = 29.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.625597, 0.625597, 0.625597, 1)
theme_override_fonts/normal_font = ExtResource("1_vc5yi")
theme_override_font_sizes/normal_font_size = 48
text = "TAP TO CONTINUE"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ContinueButton" type="Button" parent="CanvasLayer/MenuContainer"]
custom_minimum_size = Vector2(360, 640)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.509286, 0.509286, 0.509286, 1)
theme_override_fonts/font = ExtResource("1_vc5yi")
theme_override_font_sizes/font_size = 54
flat = true

[connection signal="pressed" from="CanvasLayer/MenuContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
